# sched_lm

./: .gitignore  .gitmodules  CLAUDE.md  README.md  devenv.nix  devenv.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/bench-run/: SKILL.md
docs/: policies.md  rfc-0001-kv-cache-priority-directives.md  rfc-0001-phase-3-plan.md  rfc-0001-phase-4-plan.md  rfc-0001-phase-5-plan.md  rfc-0001-upstream-feedback.md
infra/: k3d-config.yaml
infra/llm-d/: inference-pool.yaml  setup.sh  values.yaml
infra/monitoring/: prometheus-values.yaml
src/bench/: cli.py  metrics.py  program_metrics.py  prompt.py  report.py  traffic.py
src/bench/sim/: __init__.py  blocks.py  cost.py  engine.py  node.py  policies.py  priority.py  workload.py
src/gateway-plugin/: Dockerfile  class_aware_reliability.go  class_aware_reliability_test.go  classify.go  go.mod  go.sum  prerequest.go  prerequest_test.go  session.go  session_test.go  toolgap.go  toolgap_test.go
src/gateway-plugin/cmd/epp/: main.go
tests/: test_metrics.py  test_program_metrics.py  test_sim.py  test_traffic.py
